@@ -100,6 +100,7 @@
                         -Dhazelcast.elastic.memory.chunk.size=1k
                         -Dhazelcast.tomcat.shutdown_hazelcast_instance=false
                     </argLine>
+                    <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>
                 </configuration>
             </plugin>
 
@@ -180,6 +181,32 @@
                         </configuration>
                     </plugin>
 
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>problematic-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+
+                            <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.elastic.memory.enabled=true
+                                -Dhazelcast.elastic.memory.total.size=128m
+                                -Dhazelcast.elastic.memory.chunk.size=1k
+                                -Dhazelcast.tomcat.shutdown_hazelcast_instance=false
+                            </argLine>
+                            <groups>com.hazelcast.test.annotation.ProblematicTest</groups>
+                            <!--<excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>-->
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
